corrected swagger documentation
